--- a/HTML/index.html
+++ b/HTML/index.html
@@ -17,3 +17,30 @@
     <!-- alt- used to display that text mentioned in alt if the image is not present -->
     <img src="htmlImage.webp" width="500px" alt="HTML Image">
 </center>
+<ol type="I">
+    <!-- ol stands for Orderes list, to be used to make a numeric list -->
+    <!-- type attribute is used to define the type of the list. I for uppercase Roman letters, 
+     i for lowercase roman letters, 1 for numeric (default), a for lowercase alphabetical, A for uppercase
+     alphabetical list-->
+    <!-- li stands for each list element-->
+    <li>One</li>
+    <li>Two</li>
+    <li>Three</li>
+</ol>
+<ul style="list-style-type: square;">
+    <!-- ul stands for unordered list, to used to make a bullet points-->
+     <!-- The CSS list-style-type property is used to define the style of the list item marker
+      disc	Sets the list item marker to a bullet (default)
+        circle	Sets the list item marker to a circle
+        square	Sets the list item marker to a square
+        none	The list items will not be marked-->
+    <li>One</li>
+    <li>Two</li>
+    <li>Three</li>
+</ul>
+<iframe src="https://www.moviefone.com/" frameborder="1"></iframe>
+<!-- ifarme is used to bring the other website as a frame to our website-->
+ <!-- frameborder attribute is used to decides whether border has to come around the iframe or not
+  0 for no border and 1 for with border -->
+<hr>
+<!-- hr tag (Horizontal Rule) is used to create a horizontal line-->
