--- a/HTML/index1.html
+++ b/HTML/index1.html
@@ -1,17 +1,71 @@
-<table border="1">
-    <!-- Table tag is used to create a table and border attribute represents the border size of the table -->
-     <!-- tr tag represents row of the table and td tag represents coloumn of the table
-     row must be created before column gets created. -->
-    <tr>
-        <td>Name</td>
-        <td>Age</td>
-    </tr>
-    <tr>
-        <td>John</td>
-        <td>20</td>
-    </tr>
-    <tr>
-        <td>DOe</td>
-        <td>25</td>
-    </tr>
-</table>
+<center>
+    <h1>IPL Team</h1>
+    <table border="1">
+        <!-- Table tag is used to create a table and border attribute represents the border size of the table -->
+        <!-- tr tag represents row of the table and td tag represents coloumn of the table
+        row must be created before column gets created. -->
+        <tr>
+            <td>Name</td><td>Age</td><td>Team</td>
+        </tr>
+        <tr>
+            <td>Dhoni</td><td>43</td><td>CSK</td>
+        </tr>
+        <tr>
+            <td>Rohit</td><td>38</td><td>MI</td>
+        </tr>
+        <tr>
+            <td>Kholi</td><td>37</td><td>RCB</td>
+        </tr>
+    </table>
+</center>
+<form >
+    <!-- form tag is used to keep the input tags, submit & reset button -->
+    Name:<input type="text" name="Name" id=""> <br>
+    Age<input type="number" name="Ages" id=""><br>
+    <input type="submit">
+    <input type="reset" name="" id="">
+</form>
+
+<form >
+    <table>
+        <tr>
+            <td>Name</td><td><input type="text" name="" id=""></td>
+        </tr>
+        <tr>
+            <td>Age</td><td><input type="number" name="" id=""></td>
+        </tr>
+        <tr>
+            <td><input type="submit" name="" id=""></td>
+            <td><input type="reset" name="" id=""></td>
+        </tr>
+    </table>
+</form>
+<center>
+    <h1>Student Registration Form</h1>
+    <form >
+        <table>
+            <tr>
+            <td>Name</td><td><input type="text" name="" id="" placeholder="Enter your Name"></td>
+            </tr>
+            <tr>
+                <td>Age</td><td><input type="number" name="" id="" placeholder="Enter your Age"></td>
+            </tr>
+            <tr>
+                <td>Address</td><td><input type="text" name="" id="" placeholder="Enter your Address"></td>
+            </tr>
+            <tr>
+                <td>Department</td>
+                <td>
+                    <select>
+                        <option value="Python Programming">Python Programming</option>
+                        <option value="SQL">SQL</option>
+                        <option value="Github">Github</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td></td><td><input type="submit" name="submit" id=""></td>
+            </tr>
+        </table>
+    </form>
+</center>
