--- a/HTML/index1.html
+++ b/HTML/index1.html
@@ -11,7 +11,7 @@
             <td>Dhoni</td><td>43</td><td>CSK</td>
         </tr>
         <tr>
-            <td>Rohit</td><td>38</td><td>MI</td>
+            <td>KL Rahul</td><td>30</td><td>DC</td>
         </tr>
         <tr>
             <td>Kholi</td><td>37</td><td>RCB</td>
@@ -69,3 +69,4 @@
         </table>
     </form>
 </center>
+
